@@ -17,6 +17,9 @@
  *      now named \ref SImage_Host_USBTask() and \ref SImage_Host_ConfigurePipes() respectively.
  *    - The HOST_SENDCONTROL_DeviceDisconnect enum value has been renamed to \ref HOST_SENDCONTROL_DeviceDisconnected to be in
  *      line with the rest of the library error codes.
+ *    - The HID Parser item usages no longer contain seperate minimum and maximum values, as this was a violation of the HID
+ *      specification. Instead, the values are distributed evenly across each item as its usage value, to ensure that all items
+ *      can be distinguished from oneanother.
  *
  *  <b>Device Mode</b>
  *    - The CALLBACK_HID_Device_CreateHIDReport() HID Device Class driver callback now has a new ReportType parameter to
